get registry page to working state

--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,4 @@
 DirectoryIndex site.html
+
+Redirect /registry https://sarahplusjoshua.com/#registry
+Redirect /registry/ https://sarahplusjoshua.com/#registry
